# ragtrace

./: README.md  pyproject.toml
.github/workflows/: ci.yaml
analyzers/: generation.py  retrieval.py
examples/: async_rag.py  simple_rag.py
ragtrace/: __init__.py  collector.py  config.py  decorators.py  logging.py  serialization.py  session.py
ragtrace/analyzers/: __init__.py  context.py  generation.py
ragtrace/renderers/: html.py  terminal.py
renderers/: html.py
tests/: test_analyzers.py  test_decorators.py  test_renderers.py  test_session.py
tests/fixtures/: sample_session.json
