[project]
name = "ragtrace"
version = "0.1.0"
description = "A lightweight debugger for RAG pipelines"
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
keywords = [
    "rag",
    "llm",
    "debugging",
    "observability",
    "retrieval-augmented-generation",
    "developer-tools",
]
authors = [{ name = "Utsab Dahal" }]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Topic :: Software Development :: Debuggers",
]

dependencies = [
    "rich>=13.0",
    "pydantic>=2.0",
]

[project.optional-dependencies]
semantic = [
    "sentence-transformers>=3.0",
    "scikit-learn>=1.3",
]
examples = [
    "chromadb>=1.5.9",
    "httpx>=0.27",
]

[project.urls]
Homepage = "https://github.com/meutsabdahal/ragtrace"
Repository = "https://github.com/meutsabdahal/ragtrace"
Issues = "https://github.com/meutsabdahal/ragtrace/issues"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[dependency-groups]
dev = ["pytest>=8.0", "pytest-asyncio>=0.23"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
